samples/_failures_safe/1761486482_8acb8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d7f18a1.c: In function ‘main’:
./samples/SAFE/__tmp_9d7f18a1.c:129:13: error: expected ‘,’ or ‘;’ at end of input
  129 |             for (size_t j = 0
      |             ^~~
./samples/SAFE/__tmp_9d7f18a1.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d7f18a1.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d7f18a1.c:129:13: error: expected declaration or statement at end of input
